# pkg/api/v1/modules/me/routes.go
@@ -1,0 +1,18 @@
+package me
+
+import (
+	"codim/pkg/db"
+	"codim/pkg/utils/logger"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterRoutes(router *gin.RouterGroup, q *db.Queries, log *logger.Logger) {
+	svc := NewService(q)
+	ctrl := NewController(svc, log)
+
+	meGroup := router.Group("/me")
+	{
+		meGroup.GET("/", ctrl.Me)
+	}
+}
